--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ configurations.all {
         force("org.slf4j:jul-to-slf4j:1.7.32")
         force("org.slf4j:log4j-over-slf4j:1.7.32")
         force("com.google.protobuf:protobuf-java:3.22.2")
+        force("net.minidev:json-smart:2.4.10")
     }
 }
 
@@ -110,6 +111,7 @@ dependencies {
     implementation group: "io.confluent", name: "kafka-protobuf-serializer", version: confluentVersion
     implementation group: "io.confluent", name: "kafka-client-plugins", version: confluentVersion + "-ce"
     implementation 'org.sourcelab:kafka-connect-client:4.0.3'
+    implementation 'org.json:json:20230227'
 
     // strimzi
     implementation group: 'io.strimzi', name: 'kafka-oauth-common', version: '0.12.0'
